# anchr

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release.toml
.github/workflows/: build.yml  codecov.yml  publish.yml
doc/: dazzler.md  fastk.md  resources.md  unitigger.md
results/: e_coli.md  fastk.md  fda_argos.md  gage_b.md  hist.md  model.md  qlx.md  resources.md  se.md  unitigger.md  yeast.md
src/: anchr.rs  lib.rs  utils.rs
src/cmd/: anchors.rs  contained.rs  covered.rs  dazzname.rs  dep.rs  ena.rs  kunitigs.rs  merge.rs  mergeread.rs  mod.rs  orient.rs  overlap.rs  overlap2.rs  paf2ovlp.rs  quorum.rs  restrict.rs  show2ovlp.rs  template.rs  trim.rs  unitigs.rs
src/libs/: overlap.rs
templates/: 0_bsub.tera.sh  0_cleanup.tera.sh  0_master.tera.sh  0_real_clean.tera.sh  1_repetitive.tera.sh  2_fastk.tera.sh  2_fastqc.tera.sh  2_insert_size.tera.sh  2_kat.tera.sh  2_kmergenie.tera.sh  2_merge.tera.sh  2_no_quorum.tera.sh  2_quorum.tera.sh  2_sga_preqc.tera.sh  2_trim.tera.sh  3_bowtie.tera.sh  3_bwa.tera.sh  3_freebayes.tera.sh  3_gatk.tera.sh  4_anchors.tera.sh  4_down_sampling.tera.sh  4_unitigs.tera.sh  6_anchors.tera.sh  6_down_sampling.tera.sh  6_unitigs.tera.sh  7_fill_anchors.tera.sh  7_glue_anchors.tera.sh  7_merge_anchors.tera.sh  8_megahit.tera.sh  8_mr_megahit.tera.sh  8_mr_spades.tera.sh  8_platanus.tera.sh  8_spades.tera.sh  9_busco.tera.sh  9_quast.tera.sh  9_statReads.tera.sh  9_stat_anchors.tera.sh  9_stat_final.tera.sh  9_stat_merge_anchors.tera.sh  9_stat_mr_anchors.tera.sh  (+15 more)
tests/: cli.rs  cli_asm.rs  cli_ovlpr.rs  cli_pl.rs  template.rs
tests/G37/: .gitignore
tests/Lambda/: env.json  unitigs.fasta
