[package]
name = "Anchr"
version = "0.1.5-alpha.0"
authors = ["wang-q <wang-q@outlook.com>"]
edition = "2018"
description = "Assembler of N-free CHRomosomes"
documentation = "https://github.com/wang-q/Anchr"
readme = "README.md"
homepage = "https://github.com/wang-q/Anchr"
repository = "https://github.com/wang-q/Anchr"
license = "None"
categories = ["command-line-utilities", "bioinformatics"]
publish = false

[[bin]]
name = "Anchr"
path = "src/anchr.rs"

[dependencies]
clap = "2"
regex = "1"
lazy_static = "1.3.0"
flate2 = "1.0"
tera = "1"
intspan = "0.4.14"
itertools = "0.9.0"

[build-dependencies]

[dev-dependencies]
tempfile = "3.1.0"
assert_cmd = "0.11"
predicates = "1"

[profile.release]
lto = true
