[package]
name = "anchr"
version = "0.3.18"
authors = ["wang-q <wang-q@outlook.com>"]
edition = "2018"
description = "Assembler of N-free CHRomosomes"
documentation = "https://github.com/wang-q/anchr"
readme = "README.md"
homepage = "https://github.com/wang-q/anchr"
repository = "https://github.com/wang-q/anchr"
license = "None"
categories = ["command-line-utilities", "bioinformatics"]
publish = false

[[bin]]
name = "anchr"
path = "src/anchr.rs"

[dependencies]
clap = { version = "4.3.12", features = ["cargo"] }
anyhow = "1.0.72"
regex = "1.9.1"
lazy_static = "1.4.0"
itertools = "0.11.0"

indexmap = "2.0.0"
tera = "1.19.1"
intspan = "0.7.5"

which = "4.4.0"
cmd_lib = "1.9.4"
tempfile = "3.6.0"
path-clean = "1.0.1"

bio = "0.30.1"

[build-dependencies]

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"

[profile.release]
lto = true
